c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/address_of_constant.c
/* A constant is not an lvalue, so it's illegal to take its address. */
int main(void) {
    int *ptr = &10;
    return 0;
}